--- a/stack.yaml
+++ b/stack.yaml
@@ -1,29 +1,30 @@
-resolver: lts-20.18
+resolver: nightly-2024-03-20
 packages:
   - .
 extra-deps:
   - git: https://github.com/fmidue/haskell-template-task.git
-    commit: 88833637d9fdb63a24d4e998e552343dd5aa7ce9
+    commit: 0d393c806d5fa571e640e277a2e8ce62b6dafdd9
     subdirs:
       - raw/embedded
   - git: https://github.com/fmidue/IOTasks
-    commit: cd3fd97976de6368343db1806a296fcae4ff816f
-    subdirs:
-      - IOTasks
-      - dynamic-environment
-      - transparent-terms
-  - git: https://github.com/owestphal/mini-IOTasks
-    commit: aacca6ae36e484fdde8d40357e41fa15188123a9
-  - IOSpec-0.3.1.1@sha256:7458ea286386d76af1cd6e5b364914914783cdc7363a4381c795d053be129824,2773
-  - codeworld-api-0.8.1@sha256:e9ecb782608c20d0f361f9b80b42151c5f22ae1bb97ca93088c908df01753ddc,6234
+    commit: b7c3cde5e4e6f561dd9dc98df939169b7c533b47
+  - IOSpec-0.3.1.2@sha256:8a5c61b1f0f6bb5b28700e15cbfdba9d90728c96852fc395757e1751962e2084,3012
+  - git: https://github.com/fmidue/codeworld-api # codeworld-api-0.8.1 for ghc-9.8
+    commit: 69d65d22aba345de845c732a39894554088b963b
 # required by those:
   - commutative-semigroups-0.1.0.1
-  - holmes-0.3.2.0@sha256:3d4aeb74177bafedc55a9c21be682ad45929490d1d809dec7fe248a503df0290,4597
   - git: https://github.com/IagoAbal/haskell-z3
     commit: 6368e451e45359563106da7e917f6594453c5161
   - patch-0.0.8.2
-  - pretty-tree-0.1.0.0
-  - reflex-0.9.0.0
+  - reflex-0.9.3.0@sha256:e0c67fbdd4e270a1a04e3fb7bab03ac431052e9a28296bd55659204a27fa44cb,12252
   - git: https://github.com/owestphal/type-match
-    commit: e5c0d104032d7e6ea147009669cbb95f3291b7bb
+    commit: 744797d33f85daa1d78181e2c512052903352dcc
+  - newtype-generics-0.6.2@sha256:81cbf377241a186ac210bb60417ac3a23ea576257b01ec7be7051790b225daeb,2053
+  - MemoTrie-0.6.11@sha256:edda47de940a047237c395a85ac3216db6d25888002293853d7eebd01beb5da6,1516
 allow-newer: true
+allow-newer-deps:
+  - codeworld-api
+  - commutative-semigroups
+  - newtype-generics
+  - patch
+  - reflex
