--- a/stack.yaml
+++ b/stack.yaml
@@ -7,7 +7,7 @@ extra-deps:
     subdirs:
       - raw/embedded
   - git: https://github.com/fmidue/IOTasks
-    commit: 5732e8de4e8ad2f548cc8f6a02514d4dc7a93700
+    commit: 3b33001441a888ae3443def19e516e4c699fb95f
   - IOSpec-0.3.1.2@sha256:8a5c61b1f0f6bb5b28700e15cbfdba9d90728c96852fc395757e1751962e2084,3012
   - git: https://github.com/fmidue/codeworld-api # codeworld-api-0.8.1 for ghc-9.8
     commit: 69d65d22aba345de845c732a39894554088b963b
@@ -18,9 +18,11 @@ extra-deps:
   - patch-0.0.8.2
   - reflex-0.9.3.0@sha256:e0c67fbdd4e270a1a04e3fb7bab03ac431052e9a28296bd55659204a27fa44cb,12252
   - git: https://github.com/owestphal/type-match
-    commit: 744797d33f85daa1d78181e2c512052903352dcc
+    commit: e1afab43d2e8bfa5e2006492ed34060036e7be51
   - newtype-generics-0.6.2@sha256:81cbf377241a186ac210bb60417ac3a23ea576257b01ec7be7051790b225daeb,2053
   - MemoTrie-0.6.11@sha256:edda47de940a047237c395a85ac3216db6d25888002293853d7eebd01beb5da6,1516
+# used in some IOTasks configurations for memoization:
+  - chimera
 allow-newer: true
 allow-newer-deps:
   - codeworld-api
