--- a/stack.yaml
+++ b/stack.yaml
@@ -9,6 +9,8 @@ extra-deps:
   - git: https://github.com/fmidue/IOTasks
     commit: 3b33001441a888ae3443def19e516e4c699fb95f
   - IOSpec-0.3.1.2@sha256:8a5c61b1f0f6bb5b28700e15cbfdba9d90728c96852fc395757e1751962e2084,3012
+  - git: https://github.com/fmidue/codeworld-tasks
+    commit: 75bc38664aa4a9ccad766459baa9271dac5dc178
   - git: https://github.com/fmidue/codeworld-api # codeworld-api-0.8.1 for ghc-9.8
     commit: 69d65d22aba345de845c732a39894554088b963b
 # required by those:
@@ -21,6 +23,7 @@ extra-deps:
     commit: e1afab43d2e8bfa5e2006492ed34060036e7be51
   - newtype-generics-0.6.2@sha256:81cbf377241a186ac210bb60417ac3a23ea576257b01ec7be7051790b225daeb,2053
   - MemoTrie-0.6.11@sha256:edda47de940a047237c395a85ac3216db6d25888002293853d7eebd01beb5da6,1516
+  - bytestring-trie-0.2.7.6@sha256:5cda922cb8fa5d4eaf2dccbc26bc587593fb202448f0b8844a50e0d2d1aab206,8380
 allow-newer: true
 allow-newer-deps:
   - codeworld-api
