--- a/haskell-template-setup.cabal
+++ b/haskell-template-setup.cabal
@@ -31,11 +31,15 @@ library
   hs-source-dirs:
       ./
   build-depends:
-      IOSpec
-    , IOTasks
+      SVGFonts
     , base >=4.7 && <5
-    , chimera
-    , codeworld-tasks
-    , haskell-template-task-embedded
-    , pretty-simple
+    , flex-tasks
+    , logic-tasks
+    , modelling-tasks
+    , output-blocks
+    , parsec
+    , string-interpolate
+    , syb
+    , term-tasks
+    , yesod-form
   default-language: Haskell2010
