--- a/stack.yaml
+++ b/stack.yaml
@@ -9,8 +9,9 @@ extra-deps:
   - git: https://github.com/fmidue/IOTasks
     commit: 3b33001441a888ae3443def19e516e4c699fb95f
   - IOSpec-0.3.1.2@sha256:8a5c61b1f0f6bb5b28700e15cbfdba9d90728c96852fc395757e1751962e2084,3012
+# private repository
   - git: https://github.com/fmidue/codeworld-tasks
-    commit: 844f625f5e2bcb15bf43941ce50fb278ef224510
+    commit: 3ee4231f4e421919390908efcd254cdede885f1c
 # required by those:
   - git: https://github.com/IagoAbal/haskell-z3
     commit: 6368e451e45359563106da7e917f6594453c5161
