--- a/stack.yaml
+++ b/stack.yaml
@@ -10,7 +10,7 @@ extra-deps:
     commit: 3b33001441a888ae3443def19e516e4c699fb95f
   - IOSpec-0.3.1.2@sha256:8a5c61b1f0f6bb5b28700e15cbfdba9d90728c96852fc395757e1751962e2084,3012
 # private repository
-  - git: https://github.com/fmidue/codeworld-tasks
+  - git: git@github.com:fmidue/codeworld-tasks.git
     commit: 3ee4231f4e421919390908efcd254cdede885f1c
 # required by those:
   - git: https://github.com/IagoAbal/haskell-z3
