--- a/haskell-template-setup.cabal
+++ b/haskell-template-setup.cabal
@@ -37,4 +37,5 @@ library
     , chimera
     , codeworld-tasks
     , haskell-template-task-embedded
+    , pretty-simple
   default-language: Haskell2010
