--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,8 @@ category:            E-Learning
 description:         Please see the README on GitHub at <https://github.com/marcellussiegburg/haskell-template-setup#readme>
 
 dependencies:
+  - autotool-capabilities
+  - autotool-capabilities-io-instances
   - base >= 4.7 && < 5
   - flex-tasks
   - logic-tasks
