--- a/haskell-template-setup.cabal
+++ b/haskell-template-setup.cabal
@@ -32,6 +32,8 @@ library
       ./
   build-depends:
       SVGFonts
+    , autotool-capabilities
+    , autotool-capabilities-io-instances
     , base >=4.7 && <5
     , flex-tasks
     , logic-tasks
