--- a/stack.yaml
+++ b/stack.yaml
@@ -8,18 +8,23 @@ extra-deps:
       - flex-tasks
       - flex-tasks-processing
   - git: https://github.com/fmidue/output-blocks.git
-    commit: 183ef461d4da8df4c2a249e92bc0b03242c159b9
+    commit: e97c5f06a17c5b99f0bed2a733bfbf974304adf3
     subdirs:
       - output-blocks
+  - git: https://github.com/fmidue/autotool-capabilities.git
+    commit: abf9b15ad431e517ae0700ad9dfb6f6941e10538
+    subdirs:
+      - autotool-capabilities
+      - autotool-capabilities-io-instances
   - git: https://github.com/fmidue/logic-tasks.git
-    commit: 79baa6175bcb83ce74484906b53898ab600a0182
+    commit: d4281a454117b6377f74ab25eb472ed7e5edaaa3
   - git: https://github.com/fmidue/term-tasks
     commit: cb2bfac5e0145c01fbbab7e4f995d624db72dcad
   - latex-svg-image-0.2@sha256:b282a74a96724037ec3d24b664118e51170c8152aff12f363ddb715a38ef053a,1830
   - call-alloy-0.6.0.2@sha256:f7ecb0f4b8f7cc804d6d8ace7c323b48e3aa03994a2d09c4b7ee66cc4bf15abd,3850
   - diagrams-graphviz-1.4.1.1@sha256:36c02a7ff8ac60cf098c73a98abbff1eaa6fa759be42f0c2dcfe8083761b1ec0,1482
   - git: https://github.com/fmidue/modelling-tasks
-    commit: ebaff745f6d2a3faaa6821f5eac7c58c0e48ce5e
+    commit: 3df8b73de291d60f589c4709749410f9b562c7b6
   - git: https://github.com/fmidue/IOTasks
     commit: 21a9d1f159f3d447ba747036e164d6dc29dbbd73
   # dependencies for IOTasks
