--- a/stack.yaml
+++ b/stack.yaml
@@ -3,28 +3,28 @@ packages:
   - .
 extra-deps:
   - git: https://github.com/fmidue/flex-tasks.git
-    commit: 607d96ed5dc606e473513aa054a766793b0d0524
+    commit: 4ae738feee22ad11e4836b64eced903249ecfe48
     subdirs:
       - flex-tasks
       - flex-tasks-processing
   - git: https://github.com/fmidue/output-blocks.git
-    commit: e97c5f06a17c5b99f0bed2a733bfbf974304adf3
+    commit: 77d9867b1d872795064086836e1b0cf24bcfd296
     subdirs:
       - output-blocks
   - git: https://github.com/fmidue/autotool-capabilities.git
-    commit: abf9b15ad431e517ae0700ad9dfb6f6941e10538
+    commit: 8067088f23759d787c049677a26868df26c1676f
     subdirs:
       - autotool-capabilities
       - autotool-capabilities-io-instances
   - git: https://github.com/fmidue/logic-tasks.git
-    commit: d4281a454117b6377f74ab25eb472ed7e5edaaa3
+    commit: 42980592af56573e26a06580bca7f28b937f8e6d
   - git: https://github.com/fmidue/term-tasks
-    commit: cb2bfac5e0145c01fbbab7e4f995d624db72dcad
+    commit: aa3aef69faa00c7f44d4d1ea90ba3d68aa918dca
   - latex-svg-image-0.2@sha256:b282a74a96724037ec3d24b664118e51170c8152aff12f363ddb715a38ef053a,1830
   - call-alloy-0.6.0.2@sha256:f7ecb0f4b8f7cc804d6d8ace7c323b48e3aa03994a2d09c4b7ee66cc4bf15abd,3850
   - diagrams-graphviz-1.4.1.1@sha256:36c02a7ff8ac60cf098c73a98abbff1eaa6fa759be42f0c2dcfe8083761b1ec0,1482
   - git: https://github.com/fmidue/modelling-tasks
-    commit: 3df8b73de291d60f589c4709749410f9b562c7b6
+    commit: e84675c522ae4282e3ed82c2e43a030608ff71ff
   - git: https://github.com/fmidue/IOTasks
     commit: 21a9d1f159f3d447ba747036e164d6dc29dbbd73
   # dependencies for IOTasks
@@ -32,6 +32,8 @@ extra-deps:
     commit: 6368e451e45359563106da7e917f6594453c5161
   - git: https://github.com/owestphal/type-match
     commit: e1afab43d2e8bfa5e2006492ed34060036e7be51
+  # force newest version for bugfix
+  - syb-0.7.3
 
 allow-newer: true
 allow-newer-deps:
