--- a/stack.yaml
+++ b/stack.yaml
@@ -9,9 +9,8 @@ extra-deps:
   - git: https://github.com/fmidue/IOTasks
     commit: 21a9d1f159f3d447ba747036e164d6dc29dbbd73
   - IOSpec-0.3.1.2@sha256:8a5c61b1f0f6bb5b28700e15cbfdba9d90728c96852fc395757e1751962e2084,3012
-# private repository
-  - git: git@github.com:fmidue/codeworld-tasks.git
-    commit: b3e6485a434ef98787c73ff85035d91b444a390e
+  - git: https://github.com/fmidue/codeworld-tasks.git
+    commit: 0fab443186565cf993d7d996445acc75bf297b6d
 # required by those:
   - git: https://github.com/IagoAbal/haskell-z3
     commit: 6368e451e45359563106da7e917f6594453c5161
